--- a/configuration files/mpd.conf
+++ b/configuration files/mpd.conf
@@ -1,6 +1,6 @@
 ################################################################################
 
-state_file			"/etc/mpd.state"
+state_file			"/mpd/state"
 music_directory			"/mpd/music"
 playlist_directory		"/mpd/playlists"
 db_file 			"/mpd/database"
